# EasyVault

./: .gitignore  CHANGELOG.md  Cargo.toml  config.toml.example
.github/workflows/: release.yml
config/: easyvault.yaml
migrations/: 005_secret_max_reads.sql  006_settings.sql
packaging/linux/: easyvault.service  postinst  postrm  prerm
packaging/windows/: installer.nsi
src/: audit.rs  config.rs  integration_tests.rs  main.rs  secrets.rs  tls.rs
src/api/routes/: kv.rs  sys.rs
src/storage/: sqlite.rs
src/vault/: mod.rs
src/web/: mod.rs  pages.rs
